- Merging with netmail-open/wjelement - Add Visual Studio project files

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,13 +1,8 @@
-add_library(xpl SHARED
+add_library(xpl
 	xpl.c
 )
 
-if (WINDOWS)
-	set(WIN_EXTRA_LIBS hulamemmgr)
-endif(WINDOWS)
-
 target_link_libraries(xpl
-	${WIN_EXTRA_LIBS}
 	${ALL_LIBS}
 )
 
@@ -19,4 +14,7 @@ SET_TARGET_PROPERTIES(
 	INSTALL_NAME_DIR "${LIB_DEST_DIR}"
 )
 
-install(TARGETS xpl LIBRARY DESTINATION ${LIB_DEST_DIR})
+install(TARGETS xpl
+	LIBRARY DESTINATION ${LIB_DEST_DIR}
+	ARCHIVE DESTINATION ${LIB_DEST_DIR}
+	)
