--- a/src/wjreader/CMakeLists.txt
+++ b/src/wjreader/CMakeLists.txt
@@ -1,13 +1,9 @@
-add_library(wjreader SHARED
+add_library(wjreader
 	wjreader.c
 )
 
-if (WINDOWS)
-	set(WIN_EXTRA_LIBS hulamemmgr)
-endif(WINDOWS)
-
 target_link_libraries(wjreader
-	${WIN_EXTRA_LIBS}
+	xpl
 	${ALL_LIBS}
 )
 
@@ -19,4 +15,7 @@ SET_TARGET_PROPERTIES(
 	INSTALL_NAME_DIR "${LIB_DEST_DIR}"
 )
 
-install(TARGETS wjreader LIBRARY DESTINATION ${LIB_DEST_DIR})
+install(TARGETS wjreader
+	LIBRARY DESTINATION ${LIB_DEST_DIR}
+	ARCHIVE DESTINATION ${LIB_DEST_DIR}
+	)
